--- a/mm/alfresco-promena-http-client/src/main/docker/alfresco-global.properties
+++ b/mm/alfresco-promena-http-client/src/main/docker/alfresco-global.properties
@@ -15,9 +15,7 @@
 # RUN TIME PROPERTIES
 # -------------------
 
-###
-promena.communication.file.location=
-promena.host=promena
+promena.client.http.baseUrl=http://172.17.0.1:8085
 
 #
 # Alfresco configuration for running locally with PostgreSQL Database
