--- a/mm/alfresco-promena-http-client/src/main/docker/hotswap-agent.properties
+++ b/mm/alfresco-promena-http-client/src/main/docker/hotswap-agent.properties
@@ -17,7 +17,7 @@ extraClasspath=/usr/local/tomcat/hotswap-agent
 # Use plugin name - e.g.    
 #   Hotswapper, AnonymousClassPatch, WatchResources, Hibernate, Spring, Jersey2, Jetty, Tomcat,
 #   ZK, Logback, JSF, Seam, ELResolver, OsgiEquinox, Proxy, WebObjects, Weld, JBossModules, Resteasy, Gae
-disabledPlugins=Hibernate,Spring,AnonymousClassPatch
+disabledPlugins=Hibernate,Spring
 
 # Add a directory prior to webapp path (load webapp resources).
 #
