--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
@@ -1,9 +1,9 @@
 promena.transformation.error.tryAgain=true
 promena.transformation.error.delay=100ms
 
-promena.client.message-broker.consumer.queue.request=Promena.request
-promena.client.message-broker.consumer.queue.response=Promena.response
-promena.client.message-broker.consumer.queue.response.error=Promena.response.error
+#promena.client.message-broker.consumer.queue.request=Promena.request
+#promena.client.message-broker.consumer.queue.response=Promena.response
+#promena.client.message-broker.consumer.queue.response.error=Promena.response.error
 
 promena.client.message-broker.spring.activemq.broker-url=failover:(nio://localhost:{PORT})?timeout=3000&jms.useCompression=true
 promena.client.message-broker.spring.jms.pub-sub-domain=false
