[improved][alfresco-promena-message-broker-client] Adapted to new reactive API

--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
@@ -1,9 +1,10 @@
-promena.transformation.error.tryAgain=true
-promena.transformation.error.delay=100ms
+promena.client.transformation.error.retry.enabled=true
+promena.client.transformation.error.retry.maxAttempts=5
+promena.client.transformation.error.retry.nextAttemptDelay=10s
 
-#promena.client.message-broker.consumer.queue.request=Promena.request
-#promena.client.message-broker.consumer.queue.response=Promena.response
-#promena.client.message-broker.consumer.queue.response.error=Promena.response.error
+promena.client.message-broker.consumer.queue.request=Promena.request
+promena.client.message-broker.consumer.queue.response=Promena.response
+promena.client.message-broker.consumer.queue.response.error=Promena.response.error
 
 promena.client.message-broker.spring.activemq.broker-url=failover:(nio://localhost:{PORT})?timeout=3000&jms.useCompression=true
 promena.client.message-broker.spring.jms.pub-sub-domain=false
