--- a/mm/alfresco-promena-message-broker-client/pom.xml
+++ b/mm/alfresco-promena-message-broker-client/pom.xml
@@ -37,6 +37,8 @@
         <!-- JRebel Hot reloading of classpath stuff and web resource stuff -->
         <jrebel.version>1.1.8</jrebel.version>
 
+        <reactor-test.version>3.2.10.RELEASE</reactor-test.version>
+
         <mockk.version>1.9.3</mockk.version>
         <spring.version>5.1.3.RELEASE</spring.version>
         <testcontainers.version>1.11.2</testcontainers.version>
@@ -150,7 +152,12 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- TODO add module dependency to this-->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <version>${reactor-test.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
