--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-retry-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-retry-test.properties
@@ -1,6 +1,6 @@
-promena.client.transformation.error.retry.enabled=false
-promena.client.transformation.error.retry.maxAttempts=0
-promena.client.transformation.error.retry.nextAttemptDelay=0ms
+promena.client.transformation.error.retry.enabled=true
+promena.client.transformation.error.retry.maxAttempts=1
+promena.client.transformation.error.retry.nextAttemptDelay=500ms
 
 promena.client.message-broker.consumer.queue.request=Promena.request
 promena.client.message-broker.consumer.queue.response=Promena.response
