[improved][alfresco-promena-message-broker-client] Updated alfresco-promena-client amp [fixed][alfresco-promena-message-broker-client] ReactiveTransformationManager print message if mono is missing (transformation was executed in previous run of Alfresco) [fixed][alfresco-promena-message-broker-client] KryoSerializationService init (is injecting from parent module - alfresco-promena-client)

--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-retry-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-retry-test.properties
@@ -1,3 +1,6 @@
+# 100MB
+promena.client.serializer.kryo.bufferSize=104857600
+
 promena.client.transformation.error.retry.enabled=true
 promena.client.transformation.error.retry.maxAttempts=1
 promena.client.transformation.error.retry.nextAttemptDelay=500ms
