--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
@@ -1,3 +1,6 @@
+# 100MB
+promena.client.serializer.kryo.bufferSize=104857600
+
 promena.client.transformation.error.retry.enabled=false
 promena.client.transformation.error.retry.maxAttempts=0
 promena.client.transformation.error.retry.nextAttemptDelay=0ms
