[improved][all modules] Changed all property names from camelCase to dashes

--- a/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
+++ b/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
@@ -1,10 +1,10 @@
 # 100MB
-promena.client.serializer.kryo.bufferSize=104857600
+promena.client.serializer.kryo.buffer-size=104857600
 
 promena.client.communication.file.location=
 
 promena.client.transformation.error.retry.enabled=true
-promena.client.transformation.error.retry.maxAttempts=5
-promena.client.transformation.error.retry.nextAttemptDelay=10s
+promena.client.transformation.error.retry.max-attempts=5
+promena.client.transformation.error.retry.next-attempt-delay=10s
 
-promena.client.transformation.saveIfZero=true
+promena.client.transformation.save-if-zero=true
