--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
@@ -1,9 +1,9 @@
 # 100MB
-promena.client.serializer.kryo.bufferSize=104857600
+promena.client.serializer.kryo.buffer-size=104857600
 
 promena.client.transformation.error.retry.enabled=false
-promena.client.transformation.error.retry.maxAttempts=0
-promena.client.transformation.error.retry.nextAttemptDelay=0ms
+promena.client.transformation.error.retry.max-attempts=0
+promena.client.transformation.error.retry.next-attempt-delay=0ms
 
 promena.client.message-broker.consumer.queue.request=Promena.request
 promena.client.message-broker.consumer.queue.response=Promena.response
