--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -44,14 +44,15 @@
         <kotlin.version>1.3.31</kotlin.version>
         <java.version>11</java.version>
 
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
 
-        <kryo.version>4.0.0</kryo.version>
-        <akka.version>2.5.20</akka.version>
+        <kryo.version>4.0.2</kryo.version>
+        <akka.version>2.5.23</akka.version>
         <akka-kryo-serialization.version>0.5.2</akka-kryo-serialization.version>
         <kryo-serializers.version>0.45</kryo-serializers.version>
 
-        <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
+        <kotlintest-runner-junit5.version>3.3.2</kotlintest-runner-junit5.version>
+        <mockk.version>1.9.3</mockk.version>
     </properties>
 
     <dependencyManagement>
@@ -96,17 +97,21 @@
                 <artifactId>kryo-serializers</artifactId>
                 <version>${kryo-serializers.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>io.kotlintest</groupId>
+                <artifactId>kotlintest-runner-junit5</artifactId>
+                <version>${kotlintest-runner-junit5.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.mockk</groupId>
+                <artifactId>mockk</artifactId>
+                <version>${mockk.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-stream-testkit_2.12</artifactId>
                 <version>${akka.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.nhaarman.mockitokotlin2</groupId>
-                <artifactId>mockito-kotlin</artifactId>
-                <version>${mockito-kotlin.version}</version>
-                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
