[improved][promena-transformer] Updated test

--- a/base/promena-transformer/promena-transformer-internal/pom.xml
+++ b/base/promena-transformer/promena-transformer-internal/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>type-converter</artifactId>
             <version>${type-converter.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
