--- a/base/promena-transformer/pom.xml
+++ b/base/promena-transformer/pom.xml
@@ -70,10 +70,11 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
