--- a/lib/docker-test-runner/pom.xml
+++ b/lib/docker-test-runner/pom.xml
@@ -41,8 +41,8 @@
         <testcontainers.version>1.11.2</testcontainers.version>
 
         <logback.version>1.2.3</logback.version>
-        <assertj-core.version>3.12.2</assertj-core.version>
         <junit.version>4.12</junit.version>
+        <kotlintest-runner-junit5.version>3.3.2</kotlintest-runner-junit5.version>
 
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
@@ -79,15 +79,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj-core.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
+            <version>${kotlintest-runner-junit5.version}</version>
         </dependency>
     </dependencies>
 
