--- a/mm/alfresco-promena-message-broker-client/docker/docker-compose.yml
+++ b/mm/alfresco-promena-message-broker-client/docker/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3.4'
 services:
-#  Optional
   alfresco-promena-message-broker-client-share:
     image: ${docker.share.image}:${alfresco.share.version}
     environment:
@@ -49,6 +48,7 @@ services:
     volumes:
       - alfresco-promena-message-broker-client-ass-volume:/opt/alfresco-search-services/contentstore
       - alfresco-promena-message-broker-client-ass-volume:/opt/alfresco-search-services/data
+      - alfresco-promena-message-broker-client-ass-volume-solrhome:/opt/alfresco-search-services/solrhome
 
   activemq:
     image: alfresco/alfresco-activemq:5.15.6
@@ -73,6 +73,8 @@ volumes:
   alfresco-promena-message-broker-client-db-volume:
     external: true
   alfresco-promena-message-broker-client-ass-volume:
+    external: true
+  alfresco-promena-message-broker-client-ass-volume-solrhome:
     external: true
   alfresco-promena-message-broker-client-activemq-conf-volume:
     external: true
