--- a/base/promena-core/external/promena-core-external-spring/pom.xml
+++ b/base/promena-core/external/promena-core-external-spring/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>promena-core</artifactId>
         <groupId>pl.beone.promena.core</groupId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
