--- a/base/promena-executable/pom.xml
+++ b/base/promena-executable/pom.xml
@@ -7,21 +7,22 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
         <relativePath/>
         <!-- lookup parent from repository -->
     </parent>
 
     <groupId>pl.beone.promena.executable</groupId>
     <artifactId>promena-executable</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
 
     <name>Executable</name>
 
     <properties>
         <java.version>11</java.version>
 
-        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
     </properties>
 
     <dependencies>
@@ -33,46 +34,46 @@
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-configuration</artifactId>
-            <version>3.0.0-alpha</version>
+            <version>0.9.0</version>
         </dependency>
 
         <dependency>
             <groupId>pl.beone.promena.connector</groupId>
             <artifactId>promena-connector-http-configuration</artifactId>
-            <version>3.0.0-alpha</version>
+            <version>0.9.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>pl.beone.promena.connector</groupId>-->
-<!--            <artifactId>promena-connector-message-broker-configuration</artifactId>-->
-<!--            <version>3.0.0-alpha</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-message-broker-configuration</artifactId>
+            <version>0.9.0</version>
+        </dependency>
 
         <dependency>
             <groupId>pl.beone.transformer</groupId>
             <artifactId>appender-transformer-configuration</artifactId>
-            <version>1.0.0</version>
+            <version>0.9.0</version>
         </dependency>
 
         <!--<dependency>-->
         <!--<groupId>pl.beone.promena.communication</groupId>-->
         <!--<artifactId>promena-communication-file-configuration</artifactId>-->
-        <!--<version>3.0.0-alpha</version>-->
+        <!--<version>0.9.0</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>pl.beone.promena.communication</groupId>
             <artifactId>promena-communication-memory-configuration</artifactId>
-            <version>3.0.0-alpha</version>
+            <version>0.9.0</version>
         </dependency>
 
         <dependency>
             <groupId>pl.beone.promena.listener</groupId>
             <artifactId>promena-listener-cluster-member-configuration</artifactId>
-            <version>3.0.0-alpha</version>
+            <version>0.9.0</version>
         </dependency>
         <dependency>
             <groupId>pl.beone.promena.actor-creator</groupId>
             <artifactId>promena-actor-creator-adaptive-load-balancing-configuration</artifactId>
-            <version>3.0.0-alpha</version>
+            <version>0.9.0</version>
         </dependency>
     </dependencies>
 
@@ -96,7 +97,7 @@
                     <dependency>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-maven-plugin</artifactId>
-                        <version>2.1.3.RELEASE</version>
+                        <version>2.1.6.RELEASE</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -142,7 +143,7 @@
             <plugin>
                 <groupId>pl.beone.promena.maven.plugin</groupId>
                 <artifactId>promena-docker-maven-plugin</artifactId>
-                <version>1.0.0-alpha</version>
+                <version>0.9.0</version>
 
                 <configuration>
                     <name>${project.artifactId}</name>
@@ -153,7 +154,7 @@
                     <dependency>
                         <groupId>pl.beone.transformer</groupId>
                         <artifactId>appender-transformer</artifactId>
-                        <version>1.0.0</version>
+                        <version>0.9.0</version>
                     </dependency>
                 </dependencies>
 
