--- a/base/promena-transformer/pom.xml
+++ b/base/promena-transformer/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk</groupId>
         <artifactId>promena-parent</artifactId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
 
     <groupId>pl.beone.promena.transformer</groupId>
     <artifactId>promena-transformer</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
 
     <name>Transformer</name>
 
@@ -47,9 +47,9 @@
     </distributionManagement>
 
     <properties>
-        <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
+        <promena-transformer.version>0.9.0</promena-transformer.version>
 
-        <type-converter.version>1.0.0</type-converter.version>
+        <type-converter.version>0.9.0</type-converter.version>
     </properties>
 
     <dependencies>
