--- a/extension/actor-creator/adaptive-load-balancing/pom.xml
+++ b/extension/actor-creator/adaptive-load-balancing/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
 
     <groupId>pl.beone.promena.actor-creator</groupId>
     <artifactId>promena-actor-creator-adaptive-load-balancing</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
 
     <name>[EXTENSION][ACTOR CREATOR] Adaptive load balancing</name>
 
@@ -46,7 +46,7 @@
     </distributionManagement>
 
     <properties>
-        <promena-actor-creator-adaptive-load-balancing.version>3.0.0-alpha</promena-actor-creator-adaptive-load-balancing.version>
+        <promena-actor-creator-adaptive-load-balancing.version>0.9.0</promena-actor-creator-adaptive-load-balancing.version>
     </properties>
 
     <dependencies>
