--- a/extension/communication/memory/promena-communication-memory-configuration/pom.xml
+++ b/extension/communication/memory/promena-communication-memory-configuration/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>promena-communication-memory</artifactId>
         <groupId>pl.beone.promena.communication</groupId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>promena-communication-memory-configuration</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
 
     <dependencies>
         <dependency>
