--- a/extension/connector/http/promena-connector-http-configuration/pom.xml
+++ b/extension/connector/http/promena-connector-http-configuration/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>pl.beone.promena.connector</groupId>
         <artifactId>promena-connector-http</artifactId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,11 +15,6 @@
         <dependency>
             <groupId>pl.beone.promena.connector</groupId>
             <artifactId>promena-connector-http-delivery-http</artifactId>
-            <version>${promena-connector-http.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>pl.beone.promena.connector</groupId>
-            <artifactId>promena-connector-http-internal</artifactId>
             <version>${promena-connector-http.version}</version>
         </dependency>
     </dependencies>
