--- a/extension/connector/http/promena-connector-http-integration-test/pom.xml
+++ b/extension/connector/http/promena-connector-http-integration-test/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>promena-connector-http</artifactId>
         <groupId>pl.beone.promena.connector</groupId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>promena-connector-http-integration-test</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
 
     <dependencies>
         <dependency>
