--- a/extension/connector/message-broker/promena-connector-message-broker-configuration/pom.xml
+++ b/extension/connector/message-broker/promena-connector-message-broker-configuration/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>pl.beone.promena.connector</groupId>
         <artifactId>promena-connector-message-broker</artifactId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
