--- a/extension/connector/message-broker/promena-connector-message-broker-integration-test/pom.xml
+++ b/extension/connector/message-broker/promena-connector-message-broker-integration-test/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>promena-connector-message-broker</artifactId>
         <groupId>pl.beone.promena.connector</groupId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>promena-connector-message-broker-integration-test</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
 
     <properties>
         <testcontainers.version>1.11.2</testcontainers.version>
