--- a/extension/listener/cluster-member/promena-listener-cluster-member-external-akka/pom.xml
+++ b/extension/listener/cluster-member/promena-listener-cluster-member-external-akka/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>promena-listener-cluster-member</artifactId>
         <groupId>pl.beone.promena.listener</groupId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
