--- a/lib/kryo-message-converter/pom.xml
+++ b/lib/kryo-message-converter/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.beone.lib</groupId>
     <artifactId>kryo-message-converter</artifactId>
-    <version>1.0.0</version>
+    <version>0.9.0</version>
 
     <name>[LIB] kryo-message-converter</name>
 
@@ -34,15 +34,15 @@
     </distributionManagement>
 
     <properties>
-        <kotlin.version>1.3.31</kotlin.version>
-        <java.version>1.8</java.version>
+        <kotlin.version>1.3.40</kotlin.version>
+        <java.version>11</java.version>
 
-        <promena-core.version>3.0.0-alpha</promena-core.version>
+        <promena-core.version>0.9.0</promena-core.version>
 
         <spring-jms.version>5.1.5.RELEASE</spring-jms.version>
         <javax.jms-api.version>2.0.1</javax.jms-api.version>
 
-        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     </properties>
