--- a/mm/alfresco-promena-client/pom.xml
+++ b/mm/alfresco-promena-client/pom.xml
@@ -5,17 +5,17 @@
 
     <groupId>pl.beone.promena.alfresco.module</groupId>
     <artifactId>alfresco-promena-client</artifactId>
-    <version>1.0.0</version>
+    <version>0.9.0</version>
     <packaging>jar</packaging>
 
     <name>[MM] alfresco-promena-client</name>
 
     <properties>
-        <kotlin.version>1.3.31</kotlin.version>
+        <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
-        <promena-core.version>3.0.0-alpha</promena-core.version>
-        <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
+        <promena-core.version>0.9.0</promena-core.version>
+        <promena-transformer.version>0.9.0</promena-transformer.version>
 
         <reactor-core.version>3.2.10.RELEASE</reactor-core.version>
 
