--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>pl.beone.promena.sdk</groupId>
         <artifactId>promena-transformer-parent</artifactId>
-        <version>3.0.0-alpha</version>
+        <version>0.9.0</version>
         <relativePath/>
     </parent>
 
