--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.beone.promena.sdk</groupId>
     <artifactId>promena-transformer-parent</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
     <packaging>pom</packaging>
 
     <name>[SDK][POM] Promena transformer</name>
@@ -35,21 +35,20 @@
     </distributionManagement>
 
     <properties>
-        <kotlin.version>1.3.31</kotlin.version>
+        <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
-        <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
+        <promena-transformer.version>0.9.0</promena-transformer.version>
 
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
 
-        <slf4j.version>1.7.25</slf4j.version>
+        <slf4j.version>1.7.26</slf4j.version>
 
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
-        <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
-        <docker-test-runner.version>1.0.0-alpha</docker-test-runner.version>
+        <docker-test-runner.version>0.9.0</docker-test-runner.version>
 
-        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     </properties>
@@ -104,11 +103,6 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.nhaarman.mockitokotlin2</groupId>
-                <artifactId>mockito-kotlin</artifactId>
-                <version>${mockito-kotlin.version}</version>
             </dependency>
             <dependency>
                 <groupId>pl.beone.lib</groupId>
