--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.1.5.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
     </parent>
 
     <groupId>pl.beone.promena.sdk</groupId>
     <artifactId>promena-parent</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>0.9.0</version>
     <packaging>pom</packaging>
 
     <name>[SDK][POM] Promena</name>
@@ -41,10 +41,10 @@
     </distributionManagement>
 
     <properties>
-        <kotlin.version>1.3.31</kotlin.version>
+        <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
-        <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
 
         <kryo.version>4.0.2</kryo.version>
         <akka.version>2.5.23</akka.version>
