[improved][core] Default Akka TCP settings

--- a/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-akka.properties
+++ b/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-akka.properties
@@ -9,8 +9,8 @@ akka.actor.kryo.kryo-custom-serializer-init=pl.beone.promena.core.configuration.
 akka.actor.kryo.idstrategy=automatic
 akka.actor.kryo.implicit-registration-logging=true
 
-akka.remote.netty.tcp.hostname=localhost
-akka.remote.netty.tcp.port=0
+akka.remote.netty.tcp.hostname=127.0.0.1
+akka.remote.netty.tcp.port=2552
 akka.maximun-payload-size=${core.serializer.kryo.buffer-size}b
 akka.remote.netty.tcp.message-frame-size=${akka.maximun-payload-size}
 akka.remote.netty.tcp.send-buffer-size=${akka.maximun-payload-size}
